# dmsuite

./: Cargo.toml  README.md  README.rst
examples/: heat1d.rs
python/: chebdif.py  chebdifft.py  fourdif.py  fourdifft.py
src/: chebdif.rs  chebdifft.rs  common.rs  fourdif.rs  fourdifft.rs  lib.rs  main.rs
