[package]
name = "dmsuite"
version = "0.1.0"
authors = ["preiter <preiter@gwdg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.14.0"
rustfft = "5.0.1"
realfft = "1.1.0"
itertools = "0.10.0"
itertools-num = "0.1.3"
assert_approx_eq = "1.1.0"
time-test = "0.2.2"