[package]
name = "dmsuite"
version = "0.1.0"
authors = ["preiter <preiter@gwdg.de>"]
edition = "2018"

[lib]
name = "dmsuite"
path = "src/lib.rs"

[dependencies]
ndarray = "0.15.0"
rustfft = "6.0.1"
realfft = "2.0.1"

[dev-dependencies]
ndarray-linalg = { version = "0.14", features = ["openblas-static"] }
assert_approx_eq = "1.1.0"
time-test = "0.2.2"
itertools-num = "0.1.3"
gnuplot = "0.0.37"
